fix carousel height, it was covering searchbar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,8 +26,8 @@
 }
 
 .carousel{
-    height: 600px;
-    margin-top: -180px;
+    height: 500px;
+    margin-top: -130px;
     font-weight: bold;
 }
 
